--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                     </select>
                 </div>
                 <div class="input-group">
-                    <label for="maxSpeedSelector">2. Max. Geschwindigkeit (km/h):</label>
+                    <label for="maxSpeedSelector">2. Max. Geschwindigkeit:</label>
                     <select id="maxSpeedSelector">
                         <option value="20">20 km/h</option><option value="25" selected>25 km/h (Pedelec)</option><option value="32">32 km/h</option><option value="35">35 km/h</option><option value="40">40 km/h</option><option value="45">45 km/h (S-Pedelec)</option>
                     </select>
@@ -398,3 +398,4 @@
     </script>
 </body>
 </html>
+
